log
Wed 19 Apr 2023 02:35:53 AM UTC: 
 tests:  0|6
total_score: 0/70
ff744e4
Fri 30 Jun 2023 10:48:52 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
b585097
Fri 30 Jun 2023 10:49:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
5d7d28e
Fri 30 Jun 2023 10:51:50 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0c34a36
Fri 30 Jun 2023 10:52:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5382daa
Fri 30 Jun 2023 10:52:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
839353d
Fri 30 Jun 2023 10:54:36 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
6a715cc
Fri 30 Jun 2023 10:55:00 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
52ea25f
Fri 30 Jun 2023 10:57:48 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:23: error: expected expression before ‘{’ token
   58 |   mapaHash->buckets = {NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL};
      |                       ^
Compilation failed
59cc04c
Fri 30 Jun 2023 10:58:58 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
caac9c6
Fri 30 Jun 2023 11:01:23 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
15dd09a
Fri 30 Jun 2023 11:02:06 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
89b0275
Fri 30 Jun 2023 11:22:12 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:3: error: unknown type name ‘pair’; did you mean ‘Pair’?
   45 |   pair* parInsertar = createPair(key, value);
      |   ^~~~
      |   Pair
hashmap.c:45:23: error: initialization of ‘int *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   45 |   pair* parInsertar = createPair(key, value);
      |                       ^~~~~~~~~~
hashmap.c:48:30: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
   48 |     while(map->buckets[k] != NUll || map->buckets[k]->key != NULL){
      |                              ^~~~
      |                              NULL
hashmap.c:48:30: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:53:37: error: assignment to ‘Pair *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   53 |     map->buckets[posicionNuevoDato] = parInsertar;
      |                                     ^
cc1: all warnings being treated as errors
Compilation failed
6097859
Fri 30 Jun 2023 11:22:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:3: error: unknown type name ‘pair’; did you mean ‘Pair’?
   45 |   pair* parInsertar = createPair(key, value);
      |   ^~~~
      |   Pair
hashmap.c:45:23: error: initialization of ‘int *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   45 |   pair* parInsertar = createPair(key, value);
      |                       ^~~~~~~~~~
hashmap.c:53:37: error: assignment to ‘Pair *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   53 |     map->buckets[posicionNuevoDato] = parInsertar;
      |                                     ^
cc1: all warnings being treated as errors
Compilation failed
665a80c
Fri 30 Jun 2023 11:22:39 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
26c19a6
Fri 30 Jun 2023 11:40:36 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:9: error: unused variable ‘parInsertar’ [-Werror=unused-variable]
   45 |   Pair* parInsertar = createPair(key, value);
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d93a226
Fri 30 Jun 2023 11:41:10 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:16: error: ‘current’ undeclared (first use in this function)
   47 |   map->buckets[current] = parInsertar;
      |                ^~~~~~~
hashmap.c:47:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
62af9a2
Fri 30 Jun 2023 11:41:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a99d81b
Fri 30 Jun 2023 11:59:25 PM UTC: 
 hashmap.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  0|0
9506c29
Sat 01 Jul 2023 12:00:07 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
9b0c936
Sat 01 Jul 2023 12:00:39 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3f5a5c3
Sat 01 Jul 2023 12:02:14 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2481db5
Sat 01 Jul 2023 12:05:27 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5a9e16e
Sat 01 Jul 2023 12:06:47 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
3147198
Sat 01 Jul 2023 12:25:42 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
445cfba
Sat 01 Jul 2023 12:28:00 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
07362ed
Sat 01 Jul 2023 12:29:38 AM UTC: 
 hashmap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccVJbUxd.o: in function `enlarge_test':
test.c:(.text+0x11b0): undefined reference to `enlarge'
collect2: error: ld returned 1 exit status
Compilation failed
b980702
Sat 01 Jul 2023 12:29:45 AM UTC: 
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccVkze4x.o: in function `enlarge_test':
test.c:(.text+0x11b0): undefined reference to `enlarge'
collect2: error: ld returned 1 exit status
Compilation failed
ea5f2e1
Sat 01 Jul 2023 12:30:32 AM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
2d51aee
Sat 01 Jul 2023 01:00:34 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:12: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long int’ [-Werror=format=]
   45 |   printf("%d", posicionNuevoDato):
      |           ~^   ~~~~~~~~~~~~~~~~~
      |            |   |
      |            int long int
      |           %ld
hashmap.c:45:34: error: expected ‘;’ before ‘:’ token
   45 |   printf("%d", posicionNuevoDato):
      |                                  ^
      |                                  ;
hashmap.c:57:32: error: ‘parInsertar’ undeclared (first use in this function)
   57 |   map->buckets[map->current] = parInsertar;
      |                                ^~~~~~~~~~~
hashmap.c:57:32: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
37676df
Sat 01 Jul 2023 01:00:40 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:35: error: expected ‘;’ before ‘:’ token
   45 |   printf("%ld", posicionNuevoDato):
      |                                   ^
      |                                   ;
hashmap.c:57:32: error: ‘parInsertar’ undeclared (first use in this function)
   57 |   map->buckets[map->current] = parInsertar;
      |                                ^~~~~~~~~~~
hashmap.c:57:32: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
14e48d5
Sat 01 Jul 2023 01:00:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4c84532
Sat 01 Jul 2023 01:01:21 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d164f8b
Sat 01 Jul 2023 01:02:14 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d7222c8
Sat 01 Jul 2023 01:02:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
089d49f
